<resources>
    <string name="app_name">Waeen</string>
    <string name="email">Email : </string>
    <string name="password">Password : </string>
    <string name="login">Login </string>
    <string name="home">Home</string>
    <string name="supervisoranddriver">Supervisors</string>
    <string name="logout">Sign Out</string>
    <string name="absence">Absence</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="bus">Bus</string>
    <string name="request">Requestes</string>
    <string name="feedback">Feed Back</string>
    <string name="notification">Notification</string>
    <string name="internet">No Internet Connection </string>
    <string name="send">Send</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="reject">Reject</string>
    <string name="action">Take Action</string>
    <string name="backup">Back</string>
    <string name="retur">Return</string>
    <string name="insertemail">Insert Your Email</string>
    <string name="insertpassword">Insert Your Password</string>
    <string name="backuptrip">Back up</string>
    <string name="returntrip">Return</string>

    <string name="invalidemail">Invalid Email Or password</string>
    <string name="busnumber">Bus Number</string>
    <string name="supervisorname">SuperVisor</string>
    <string name="busname">Bus Name</string>
    <string name="speed">Speed</string>

    <string name="supername">SuperVisor Name</string>
    <string name="superphone">SuperVisor Phone </string>
    <string name="superaddress">SuperVisor Address </string>

    <string name="sendmsg">Send Message</string>

    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="requestabsence">Request Absence Sent Success</string>
    <string name="studentname">Student Name</string>
    <string name="drivername">Driver Name</string>
    <string name="driverphone">Driver Phone</string>
    <string name="Capacity">Capacity</string>
    <string name="numberstudent">Number Student</string>

    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="studentinbus">Student in Bus</string>
    <string name="studentinhome">Student in Home</string>
    <string name="studentadd">Student Address</string>
    <string name="parentphone">Parent Phone</string>
    <string name="parentaddre">Parent Address</string>
    <string name="paren">Parent</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
</resources>
