<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_margin="@dimen/_10sdp"
    android:paddingBottom="@dimen/_10sdp"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:id="@+id/T_Name"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:id="@+id/T_OldAddress"
       android:layout_below="@+id/T_Name"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:id="@+id/T_NewAddress"
        android:layout_below="@+id/T_OldAddress"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:id="@+id/From"
        android:layout_below="@+id/T_NewAddress"
        android:text="@string/from"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:id="@+id/T_From"
        android:layout_below="@+id/T_NewAddress"
        android:layout_toRightOf="@+id/From"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/to"
        android:layout_toLeftOf="@+id/T_To"
        android:layout_below="@+id/T_NewAddress"
        android:text="@string/to"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_alignParentRight="true"
        android:id="@+id/T_To"
        android:layout_below="@+id/T_NewAddress"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_centerHorizontal="true"
        android:id="@+id/T_Tybe"
        android:layout_below="@+id/From"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/T_Tybe"
        android:layout_marginRight="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_40sdp"
        android:background="#e1e1e1"
        android:id="@+id/view"
        />

    <Button
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_below="@+id/view"
        android:background="@drawable/bcusertwo"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:id="@+id/Reject"
        android:text="@string/reject"
        android:textAllCaps="false"
        />

    <Button
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_below="@+id/view"
        android:background="@drawable/bcusertwo"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_alignParentRight="true"
        android:id="@+id/action"
        android:text="@string/action"
        android:textAllCaps="false"
        />

</RelativeLayout>